# groth-shuffle

./: .gitignore  CMakeLists.txt  CODE_REVIEW_REPORT.md  CODE_REVIEW_UPDATE.md  LICENSE  README.md  benchmarks.txt  bg12_poker_server.cc  build_wasm.sh  demo_wasm.js  player0.key  player1.key  run.sh
build_wasm/: groth_shuffle_js.js  groth_shuffle_js.wasm
demo/: holdem_demo.cc  mediated_demo.cc  server_demo.cc  server_mediated_detailed.cc
poker-cli/: Cargo.toml
poker-cli/src/: main.rs  network.rs
rust_shuffle/: Cargo.toml  run_wasm.js
rust_shuffle/examples/: explore_ziffle.rs  type_probe.rs
rust_shuffle/src/: lib.rs  main.rs  simulation.rs
src/: cipher.cc  cipher.h  commit.cc  commit.h  curve.cc  curve.h  hash.cc  hash.h  js_bindings.cc  parallel.cc  parallel.h  prg.cc  prg.h  shuffler.cc  shuffler.h  utils.h  zkp.cc  zkp.h
test/: catch.hpp  test_curve.cc  test_hash.cc  test_security.cc  test_shuffler.cc  test_zkp.cc
