[package]
name = "rust_shuffle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ziffle = { path = "../ziffle" }
ark-std = "0.4"
rand = "0.8"
hex = "0.4"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1